<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.bschlangaul.schulbuecher</groupId>
  <artifactId>schulbuecher</artifactId>
  <version>0.1.0</version>

  <name>java-schulbuecher</name>
  <url>https://github.com/bschlangaul-sammlung/java-schulbuecher</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- javadoc: release version 13 not supported -->
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
  </properties>

  <repositories>
    <repository>
      <id>project-repository</id>
      <url>file://${project.basedir}/repository</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.11.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>


  <dependencies>

    <dependency>
      <groupId>greenfoot</groupId>
      <artifactId>greenfoot</artifactId>
      <version>3.8.1</version>
    </dependency>

    <dependency>
      <groupId>ea.edu</groupId>
      <artifactId>AlphaEngine</artifactId>
      <version>4.0.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/javazoom/jlayer -->
    <dependency>
      <groupId>javazoom</groupId>
      <artifactId>jlayer</artifactId>
      <version>1.0.1</version>
    </dependency>

    <dependency>
      <groupId>javakarol</groupId>
      <artifactId>javakarol</artifactId>
      <version>3.0.4</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

    <!--
    src/main/java/org/bschlangaul/schulbuecher/cornelsen/informatik_5/kapitel_01/thema_02/aufgabe_05/graph_matrix -->
    <!--
    src/main/java/org/bschlangaul/schulbuecher/cornelsen/informatik_5/kapitel_01/thema_02/aufgabe_07/graph_liste -->
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.46.1.3</version>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent
            pom) -->
      <plugins>
        <!-- clean lifecycle, see
                https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see
        https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see
                https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>


        <plugin>
          <groupId>com.xenoamess</groupId>
          <artifactId>remove-unused-imports-maven-plugin</artifactId>
          <version>0.0.6</version>
          <executions>
            <execution>
              <goals>
                <goal>process</goal>
              </goals>
              <configuration>
                <ruleNames>
                  <ruleName>UnusedImports</ruleName>
                  <ruleName>DuplicateImports</ruleName>
                  <ruleName>UnnecessaryReturn</ruleName>
                  <ruleName>ImportFromSamePackage</ruleName>
                  <ruleName>DontImportJavaLang</ruleName>
                </ruleNames>
                <pmdXmlPath>${basedir}/target/pmd.xml</pmdXmlPath>
                <breakBuildIfHaveViolationRemains>false</breakBuildIfHaveViolationRemains>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- https://maven.apache.org/plugins/maven-javadoc-plugin/ -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <!--
                    https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html#show -->
          <show>private</show>
          <!-- to disable the "missing" warnings -->
          <doclint>all,-missing</doclint>
          <!--
                    https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html#verbose -->
          <!-- To disable verbose output for each class -->
          <verbose>false</verbose>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- https://maven.apache.org/plugins/maven-assembly-plugin/ -->
      <!-- https://maven.apache.org/plugins/maven-assembly-plugin/usage.html -->
      <!-- https://maven.apache.org/plugins/maven-assembly-plugin/single-mojo.html -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!--
              https://code.revelc.net/formatter-maven-plugin/
      https://code.revelc.net/formatter-maven-plugin/examples.html#basic-configuration-using-external-resource -->
      <plugin>
        <groupId>net.revelc.code.formatter</groupId>
        <artifactId>formatter-maven-plugin</artifactId>
        <version>2.29.0</version>
        <configuration>
          <configFile>eclipse-formatter.xml</configFile> <!--
          engine-pi/src/main/resources/eclipse-formatter.xml -->
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>de.pirckheimer-gymnasium</groupId>
            <artifactId>engine-pi</artifactId>
            <version>0.29.0</version>
          </dependency>
        </dependencies>
      </plugin>
      <!-- Creates a jar archive of the source files of the current project. The jar file is,
            by default, created in the project's target directory. -->
      <!-- https://maven.apache.org/plugins/maven-source-plugin/ -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- Signs all of a project's attached artifacts with GnuPG. -->
      <!-- https://maven.apache.org/plugins/maven-gpg-plugin/usage.html -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <!-- This is necessary for gpg to not try to use the pinentry programs -->
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <!-- Um *.java Dateien im jar Archiv zu haben. -->
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
      </resource>
    </resources>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.7</version>
      </plugin>
    </plugins>
  </reporting>
</project>
